--- a/components/priceTarif/Style.scss
+++ b/components/priceTarif/Style.scss
@@ -1,10 +1,15 @@
 .containerPriceTarif {
 	display: flex;
-	margin-top: 150px;
+	margin-top: 60px;
 
 	@media screen and (max-width: 1000px) {
 		flex-wrap: wrap;
 		justify-content: center;
+	}
+
+	@media screen and (max-width: 800px) {
+		flex-direction: column;
+		align-items: center;
 	}
 
 	.itemCezar {
@@ -14,15 +19,20 @@
 		position: relative;
 		margin-right: 20px;
 
-	
-	
-
-		
+		@media screen and (max-width: 800px) {
+			margin-top: 60px;
+			width: 85%;
+			margin-left: 20px;
+		}
 
 		.imgCezar {
 			padding-top: 2px;
 			position: absolute;
 			margin-left: 10px;
+
+			@media screen and (max-width: 800px) {
+				margin-left: 70px;
+			}
 		}
 
 		.saleTarif {
@@ -46,10 +56,21 @@
 		position: relative;
 		margin-left: 20px;
 
+		@media screen and (max-width: 800px) {
+			margin-left: 0px;
+			margin-top: 60px;
+			width: 85%;
+		}
+
 		.imgCharlDeGol {
 			padding-top: -50px;
 			position: absolute;
 			margin-left: 60px;
+
+			@media screen and (max-width: 800px) {
+				margin-left: 110px;
+				margin-top: -8px;
+			}
 		}
 
 		.tarifCharlDeGol {
@@ -68,10 +89,20 @@
 		position: relative;
 		margin-left: 30px;
 
+		@media screen and (max-width: 800px) {
+			margin-left: 0px;
+			margin-top: 60px;
+			width: 85%;
+		}
+
 		.imgCherchil {
 			padding-top: -40px;
 			position: absolute;
 			margin-left: 0px;
+
+			@media screen and (max-width: 800px) {
+				margin-left: 50px;
+			}
 		}
 
 		.tarifCherchil {
@@ -90,6 +121,11 @@
 		background: linear-gradient(111.57deg, rgba(255, 248, 248, 0.54) 35.83%, rgba(255, 255, 255, 0.108) 77.98%), linear-gradient(106.88deg, #F8B50B 37.26%, rgba(235, 171, 7, 0.59) 77.88%);
 		border-radius: 20px;
 		margin-top: 190px;
+
+		@media screen and (max-width: 800px) {
+			width: 85%;
+			margin-left: 0px;
+		}
 	}
 }
 
@@ -175,6 +211,10 @@
 		color: #FDFDFD;
 		margin-left: 16px;
 		margin-top: 18px;
+
+		@media screen and (max-width: 800px) {
+			min-width: 355px;
+		}
 	}
 
 	.punctItem {
