--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -31,7 +31,7 @@ $primary: #EBAB07;
 
 	@media screen and (max-width: 800px) {
 		max-width: 800px;
-		grid-template-rows: 890px 470px 1389px 587px 850px 1700px 120px 700px 600px 900px 6400px 1000px 900px 789px;
+		grid-template-rows: 890px 470px 1389px 587px 850px 1700px 120px 700px 500px 900px 6000px 1000px 900px 789px;
 	}
 
 	// @media screen and (max-width: 500px) {
@@ -1478,6 +1478,7 @@ $primary: #EBAB07;
 
 	.itemHome12Secret {
 		display: none;
+
 		
 		@media screen and (max-width: 800px) {
 			display: flex;
@@ -1509,14 +1510,14 @@ $primary: #EBAB07;
 				width: 100%;
 				align-items: center;
 				margin-top: 44px;
-				background-color: rgba(255, 0, 0, 0);
+				// background-color: rgba(255, 0, 0, 0.664);
 
 				.formBlock {
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-					width: 100%;
+					width: 84%;
+					margin-left: 8%;
+					// background-color: #0031e3;
 				}
+				
 				.inpSecretForm {
 					width: 100%;
 					outline: none;
@@ -1564,7 +1565,7 @@ $primary: #EBAB07;
 	.itemHome12 {
 		grid-column-start: 1;
 		grid-column-end: 4;
-		background-color: #181818;
+		background-color: #00be0900;
 		display: grid;
 		grid-template-columns: 1.7fr 1fr;
 		grid-template-rows: 1000px;
