--- a/App.scss
+++ b/App.scss
@@ -413,11 +413,11 @@ button {
 			height: 650px;
 		}
 
-
-
 		.blockDetalis {
 			display: flex;
 			margin-left: 20%;
+			background-color: rgba(255, 0, 0, 0);
+			margin-right: 1%;
 
 			.detalisText {
 				text-align: center;
@@ -427,6 +427,7 @@ button {
 
 				@media screen and (max-width: 800px) {
 					text-align: center;
+					font-size: 25px;
 				}
 			}
 
@@ -439,9 +440,19 @@ button {
 				background-color: #00000000;
 				transition: 0.3s;
 
+				@media screen and (max-width: 800px) {
+					margin-left: 10%;
+				}
+
 				.imgBtnCross {
 					width: 30px;
 					height: 30px;
+
+					@media screen and (max-width: 800px) {
+						width: 20px;
+						height: 20px;
+						margin-left: -20px;
+					}
 				}
 			}
 
@@ -466,6 +477,11 @@ button {
 			color: white;
 			outline: none;
 			background-color: rgba(255, 255, 255, 0);
+
+			@media screen and (max-width: 800px) {
+				width: 90%;
+				margin-left: 5%;
+			}
 		}
 
 		.goToPayBtn {
@@ -480,6 +496,10 @@ button {
 			transition: 0.4s;
 			font-size: 18px;
 
+			@media screen and (max-width: 800px) {
+				width: 90%;
+				margin-left: 5%;
+			}
 		}
 
 		.goToPayBtn:hover {
