--- a/components/priceTarif/Style.scss
+++ b/components/priceTarif/Style.scss
@@ -213,7 +213,7 @@
 		margin-top: 18px;
 
 		@media screen and (max-width: 800px) {
-			min-width: 355px;
+			min-width: 320px;
 		}
 	}
 
@@ -274,10 +274,15 @@
 }
 
 .textPayLink {
-	width: 60%;
+	max-width: 60%;
 	margin-left: 20%;
 	color: white;
 	font-family: 'Montserrat';
 	text-align: center;
 	margin-top: 20px;
+
+	@media screen and (max-width: 800px) {
+		max-width: 80%;
+		margin-left: 10%;
+	}
 }
