--- a/pages/Style.scss
+++ b/pages/Style.scss
@@ -175,7 +175,7 @@ $primary: #EBAB07;
 				@media screen and (max-width: 800px) {
 					margin-left: 100px;
 					font-size: 10px;
-					margin-top: 260px;
+					margin-top: 360px;
 					width: 82px;
 					margin-left: 270px;
 				}
@@ -186,6 +186,7 @@ $primary: #EBAB07;
 				left: 220px;
 				z-index: 1;
 				top: 400px;
+				background-color: rgba(255, 0, 0, 0);
 
 
 				@media screen and (max-width: 1440px) {
@@ -195,9 +196,9 @@ $primary: #EBAB07;
 				}
 
 				@media screen and (max-width: 800px) {
-					width: 60%;
-					top: 700px;
-					left: 240px;
+					width: 50%;
+					top: 730px;
+					left: 220px;
 				}
 			}
 		}
@@ -552,7 +553,7 @@ $primary: #EBAB07;
 		@media screen and (max-width: 800px) {
 			background-image: url('../components/img/secretFon.png');
 			background-size: 70%;
-			background-position: right center;
+			background-position: right bottom;
 			background-repeat: no-repeat;
 		}
 
