--- a/App.scss
+++ b/App.scss
@@ -372,6 +372,10 @@ button {
 			@media screen and (max-width: 1000px) {
 				width: 82%;
 			}
+
+			@media screen and (max-width: 800px) {
+				font-size: 13px;
+			}
 		}
 	}
 
