--- a/components/questions/Style.scss
+++ b/components/questions/Style.scss
@@ -90,6 +90,13 @@
 	font-size: 30px;
 	margin-top: 20px;
 	cursor: pointer;
+
+	@media screen and (max-width: 800px) {
+		width: 20px;
+		height: 20px;
+		font-size: 15px;
+		margin-top: 45px;
+	}
 }
 
 .blocOutSecretQuestions {
